# PhantomFPGA

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  problems.md  questions.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  Makefile  phantomfpga_app.c  phantomfpga_app.cpp  phantomfpga_app.h  phantomfpga_app_impl.cpp
ci/: README.md  azure-pipelines.yml
ci/scripts/: build-buildroot.sh  build-qemu.sh  run-integration-tests.sh  smoke-test.sh
docs/: architecture.md  driver-guide.md  glossary.md  phantomfpga-datasheet.md  register-reference.md
driver/: Makefile  phantomfpga_drv.c  phantomfpga_regs.h  phantomfpga_uapi.h
platform/: run_qemu.sh
platform/buildroot/: Makefile
platform/buildroot/configs/: phantomfpga_aarch64_defconfig  phantomfpga_x86_64_defconfig  toolchain-bootlin-aarch64.fragment  toolchain-bootlin-x86_64.fragment
platform/buildroot/overlay/etc/: fstab  motd
platform/buildroot/overlay/etc/network/: interfaces
platform/buildroot/overlay/etc/profile.d/: phantomfpga.sh
platform/buildroot/overlay/etc/ssh/: sshd_config
platform/buildroot/overlay/root/: .bashrc
platform/qemu/: Makefile  setup.sh
platform/qemu/patches/: 0001-hw-misc-add-phantomfpga-pcie-device.patch
platform/qemu/src/hw/misc/: phantomfpga.c  phantomfpga.h
tests/integration/: run_all.sh  test_driver.sh  test_faults.sh  test_streaming.sh
tests/unit/: Makefile  phantomfpga-test.c  run-qtest.sh
tools/: encode_frames.py  validate_stream.py
viewer/: Makefile  phantomfpga_view.c  phantomfpga_view.cpp  phantomfpga_view.h  phantomfpga_view_impl.cpp
